Add some initial tests for SBVRParser and SBVR_PreProc.

--- a/test/index.html
+++ b/test/index.html
@@ -6,16 +6,31 @@
 
 <!-- reference your own javascript files here -->
 
-  <script src="../js/libs/modernizr-2.0.6.min.js"></script>
-  
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> 
-  <script src="../js/plugins.js"></script> 
-  <script src="../js/script.js"></script> 
+	<script src="../js/libs/modernizr-2.0.6.min.js"></script>
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> 
+	<script src="../js/plugins.js"></script> 
+	<script src="../js/script.js"></script>
+	
+	
+	<script defer src="../js/mylibs/inflection.js"></script>
+	
+	<script defer src="../ometa-js/lib.js"></script>
+	<script defer src="../ometa-js/ometa-base.js"></script>
+	
+	<script defer src='../js/mylibs/ometa-code/SBVRParser.js'></script>
+	<script defer src='../js/mylibs/ometa-code/SBVR_PreProc.js'></script>
+	<script defer src='../js/mylibs/ometa-code/SBVR2SQL.js'></script>
+	<script defer src='../js/mylibs/ometa-code/ClientURIParser.js'></script>
+	<script defer src='../js/mylibs/ometa-code/ClientURIUnparser.js'></script>
+	<script defer src='../js/mylibs/ometa-code/ServerURIParser.js'></script>
+	<script defer src='../js/mylibs/ometa-code/Prettify.js'></script>
 
 
 <!-- test runner files -->
 	<script src="qunit/qunit.js"></script>
 	<script src="tests.js"></script>
+	<script src="sbvr.js"></script>
 
 
 
