--- a/index.html
+++ b/index.html
@@ -132,18 +132,14 @@ Copyright 2011 University of Surrey
 
 	<!-- JavaScript at the bottom for fast page loading -->
 
-	<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-	<!-- TODO: When we are serving via http then switch back to the google CDN method, but until then it delays loading page fairly considerably :(
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-	-->
 	<script src="js/libs/require-0.26.0.min.js"></script>
 
 	<script>
 		require({
 			baseUrl: 'js',
 			paths: {
-				jquery: 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min'
+				jquery: 'libs/jquery-1.6.2.min'
+//				jquery: 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min'
 			},
 			priority: ['jquery']
 		}, ['libs/jquery-ui-1.8.11.custom.min',
