Change to listening on all interfaces. Add logging info when started as a node server. Call failureCallback if we do not match any of the branches in remoteServerRequest. Require the OMeta code we need within server.coffee so that node knows to load them.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ Copyright 2011 University of Surrey
 	<script src="js/libs/require-0.26.0.min.js"></script>
 
 	<script>
-		require({
+		var requirejs = require;
+		requirejs({
 			baseUrl: 'js',
 			paths: {
 				jquery: 'libs/jquery-1.6.2.min'
