change title at index.html to rulemotion canvas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Copyright 2011 University of Surrey
 			 More info: h5bp.com/b/378 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Mondat Canvas</title>
+	<title>rulemotion canvas</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
