--- a/CodeMirror2/manual.html
+++ b/CodeMirror2/manual.html
@@ -40,7 +40,7 @@
     and style sheet found under <code>lib/</code> in the distribution,
     plus a mode script from one of the <code>mode/</code> directories
     and a theme stylesheet from <code>theme/</code>. (See
-    also <a href="compress.html">the compresion helper</a>.) For
+    also <a href="compress.html">the compression helper</a>.) For
     example:</p>
 
     <pre>&lt;script src="lib/codemirror.js">&lt;/script>
@@ -48,7 +48,7 @@
 &lt;script src="mode/javascript/javascript.js">&lt;/script>
 &lt;link rel="stylesheet" href="theme/default.css"></pre>
 
-    <p>(If you use a them other than <code>default.css</code>, you
+    <p>(If you use a theme other than <code>default.css</code>, you
     also have to specify the
     <a href="#option_theme"><code>theme</code></a> option.) Having
     done this, an editor instance can be created like this:</p>
@@ -626,8 +626,8 @@
       the editor's current content).</dd>
     </dl>
 
-    <p id="defineExtension">If you want define extra methods in terms
-    of the CodeMirror API, is it possible to
+    <p id="defineExtension">If you want to define extra methods in terms
+    of the CodeMirror API, it is possible to
     use <code>CodeMirror.defineExtension(name, value)</code>. This
     will cause the given value (usually a method) to be added to all
     CodeMirror instances created from then on.</p>
@@ -726,7 +726,9 @@
       <dd>Moves the position to the end of the line.</dd>
       <dt><code>skipTo(ch) → boolean</code></dt>
       <dd>Skips to the next occurrence of the given character, if
-      found. Returns true if the character was found.</dd>
+      found on the current line (doesn't advance the stream if the
+      character does not occur on the line). Returns true if the
+      character was found.</dd>
       <dt><code>match(pattern, consume, caseFold) → boolean</code></dt>
       <dd>Act like a
       multi-character <code>eat</code>—if <code>consume</code> is true
