Move inflection.js to libs from mylibs as it's external code.

--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
 	<script src="../js/script.js"></script>
 	
 	
-	<script defer src="../js/mylibs/inflection.js"></script>
+	<script defer src="../js/libs/inflection.js"></script>
 	
 	<script defer src="../ometa-js/lib.js"></script>
 	<script defer src="../ometa-js/ometa-base.js"></script>
