--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Copyright 2011 University of Surrey
 						<input type="button" id='br'   value="Reset"         onClick="resetClient();return false">
 						<input type="button" id='bbdb' value="Backup DB"     onClick="backupDB();return false">
 						<input type="button" id='brdb' value="Restore DB"    onClick="restoreDB();return false">
-						<input type="button" id='bcdb' value="Clear DB"      onClick="serverRequest('POST', '/cleardb/');return false">
+						<input type="button" id='bcdb' value="Clear DB"      onClick="serverRequest('DELETE', '/cleardb/');return false">
 					<!--#ENDIFDEF-->
 				</div>
 			</form>
