Expose backupDB on the api.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Copyright 2011 University of Surrey
 						<input type="button" id='bem'  value="Execute Model" onClick="transformClient(sbvrEditor.getValue());return false">
 						<input type="button" id='bum'  value="Update Model"  onClick="return false">
 						<input type="button" id='br'   value="Reset"         onClick="resetClient();return false">
-						<input type="button" id='bbdb' value="Backup DB"     onClick="backupDB();return false">
+						<input type="button" id='bbdb' value="Backup DB"     onClick="serverRequest('POST', '/backupdb/');return false">
 						<input type="button" id='brdb' value="Restore DB"    onClick="restoreDB();return false">
 						<input type="button" id='bcdb' value="Clear DB"      onClick="serverRequest('DELETE', '/cleardb/');return false">
 					<!--#ENDIFDEF-->
