--- a/CodeMirror2/oldrelease.html
+++ b/CodeMirror2/oldrelease.html
@@ -15,6 +15,23 @@
 <img src="css/baboon.png" class="logo" alt="logo"/>/* Old release history */
 
 </pre>
+  <p class="rel">26-05-2011: <a href="http://codemirror.net/codemirror-2.01.zip">Version 2.01</a>:</p>
+  <ul class="rel-note">
+    <li>Add a <a href="mode/smalltalk/index.html">Smalltalk mode</a>.</li>
+    <li>Add a <a href="mode/rst/index.html">reStructuredText mode</a>.</li>
+    <li>Add a <a href="mode/python/index.html">Python mode</a>.</li>
+    <li>Add a <a href="mode/plsql/index.html">PL/SQL mode</a>.</li>
+    <li><code>coordsChar</code> now works</li>
+    <li>Fix a problem where <code>onCursorActivity</code> interfered with <code>onChange</code>.</li>
+    <li>Fix a number of scrolling and mouse-click-position glitches.</li>
+    <li>Pass information about the changed lines to <code>onChange</code>.</li>
+    <li>Support cmd-up/down on OS X.</li>
+    <li>Add triple-click line selection.</li>
+    <li>Don't handle shift when changing the selection through the API.</li>
+    <li>Support <code>"nocursor"</code> mode for <code>readOnly</code> option.</li>
+    <li>Add an <code>onHighlightComplete</code> option.</li>
+    <li>Fix the context menu for Firefox.</li>
+  </ul>
 
   <p class="rel">28-03-2011: <a href="http://codemirror.net/codemirror-2.0.zip">Version 2.0</a>:</p>
   <p class="rel-note">CodeMirror 2 is a complete rewrite that's
