--- a/CodeMirror2/index.html
+++ b/CodeMirror2/index.html
@@ -40,24 +40,28 @@
       <li><a href="mode/coffeescript/index.html">CoffeeScript</a></li>
       <li><a href="mode/css/index.html">CSS</a></li>
       <li><a href="mode/diff/index.html">diff</a></li>
-      <li><a href="mode/javascript/index.html">JavaScript</a></li>
+      <li><a href="mode/groovy/index.html">Groovy</a></li>
       <li><a href="mode/haskell/index.html">Haskell</a></li>
       <li><a href="mode/htmlmixed/index.html">HTML mixed-mode</a></li>
+      <li><a href="mode/javascript/index.html">JavaScript</a></li>
       <li><a href="mode/jinja2/index.html">Jinja2</a></li>
       <li><a href="mode/lua/index.html">Lua</a></li>
       <li><a href="mode/markdown/index.html">Markdown</a></li>
       <li><a href="mode/ntriples/index.html">NTriples</a></li>
       <li><a href="mode/pascal/index.html">Pascal</a></li>
+      <li><a href="mode/perl/index.html">Perl</a></li>
       <li><a href="mode/php/index.html">PHP</a></li>
       <li><a href="mode/plsql/index.html">PL/SQL</a></li>
       <li><a href="mode/python/index.html">Python</a></li>
       <li><a href="mode/r/index.html">R</a></li>
       <li><a href="mode/rst/index.html">reStructuredText</a></li>
       <li><a href="mode/ruby/index.html">Ruby</a></li>
+      <li><a href="mode/rust/index.html">Rust</a></li>
       <li><a href="mode/scheme/index.html">Scheme</a></li>
       <li><a href="mode/smalltalk/index.html">Smalltalk</a></li>
       <li><a href="mode/sparql/index.html">SPARQL</a></li>
       <li><a href="mode/stex/index.html">sTeX, LaTeX</a></li>
+      <li><a href="mode/tiddlywiki/index.html">Tiddlywiki</a></li>
       <li><a href="mode/velocity/index.html">Velocity</a></li>
       <li><a href="mode/xml/index.html">XML/HTML</a> (<a href="mode/xmlpure/index.html">alternative XML</a>)</li>
       <li><a href="mode/yaml/index.html">YAML</a></li>
@@ -71,6 +75,7 @@
       <li><a href="demo/complete.html">Autocompletion</a></li>
       <li><a href="demo/mustache.html">Mode overlays</a></li>
       <li><a href="demo/search.html">Search/replace</a></li>
+      <li><a href="demo/folding.html">Code folding</a></li>
       <li><a href="demo/preview.html">HTML editor with preview</a></li>
       <li><a href="demo/resize.html">Auto-resizing editor</a></li>
       <li><a href="demo/marker.html">Setting breakpoints</a></li>
@@ -168,6 +173,18 @@
 
   <h2>Releases:</h2>
 
+  <p class="rel">27-10-2011: <a href="http://codemirror.net/codemirror-2.16.zip">Version 2.16</a>:</p>
+  <ul class="rel-note">
+    <li>Add <a href="mode/perl/index.html">Perl</a>, <a href="mode/rust/index.html">Rust</a>, <a href="mode/tiddlywiki/index.html">TiddlyWiki</a>, and <a href="mode/groovy/index.html">Groovy</a> modes.</li>
+    <li>Dragging text inside the editor now moves, rather than copies.</li>
+    <li>Add a <a href="manual.html#coordsFromIndex"><code>coordsFromIndex</code></a> method.</li>
+    <li><strong>API change</strong>: <code>setValue</code> now no longer clears history. Use <a href="manual.html#clearHistory"><code>clearHistory</code></a> for that.</li>
+    <li><strong>API change</strong>: <a href="manual.html#markText"><code>markText</code></a> now
+    returns an object with <code>clear</code> and <code>find</code>
+    methods. Marked text is now more robust when edited.</li>
+    <li>Fix editing code with tabs in Internet Explorer.</li>
+  </ul>
+
   <p class="rel">26-09-2011: <a href="http://codemirror.net/codemirror-2.15.zip">Version 2.15</a>:</p>
   <p class="rel-note">Fix bug that snuck into 2.14: Clicking the
   character that currently has the cursor didn't re-focus the
@@ -236,24 +253,6 @@
     <li>Add <a href="demo/runmode.html">runmode.js</a>.</li>
     <li>Immediately re-highlight text when typing.</li>
     <li>Fix problem with 'sticking' horizontal scrollbar.</li>
-  </ul>
-
-  <p class="rel">26-05-2011: <a href="http://codemirror.net/codemirror-2.01.zip">Version 2.01</a>:</p>
-  <ul class="rel-note">
-    <li>Add a <a href="mode/smalltalk/index.html">Smalltalk mode</a>.</li>
-    <li>Add a <a href="mode/rst/index.html">reStructuredText mode</a>.</li>
-    <li>Add a <a href="mode/python/index.html">Python mode</a>.</li>
-    <li>Add a <a href="mode/plsql/index.html">PL/SQL mode</a>.</li>
-    <li><code>coordsChar</code> now works</li>
-    <li>Fix a problem where <code>onCursorActivity</code> interfered with <code>onChange</code>.</li>
-    <li>Fix a number of scrolling and mouse-click-position glitches.</li>
-    <li>Pass information about the changed lines to <code>onChange</code>.</li>
-    <li>Support cmd-up/down on OS X.</li>
-    <li>Add triple-click line selection.</li>
-    <li>Don't handle shift when changing the selection through the API.</li>
-    <li>Support <code>"nocursor"</code> mode for <code>readOnly</code> option.</li>
-    <li>Add an <code>onHighlightComplete</code> option.</li>
-    <li>Fix the context menu for Firefox.</li>
   </ul>
 
   <p><a href="oldrelease.html">Older releases...</a></p>
