initial version of model saving

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ Copyright 2011 University of Surrey
 				<!-- windows wants 189 cols for the textareas -->
 				<textarea id="modelArea" rows="15" cols="136"></textarea>
 				<div align="right">
+					<input type="button" id='save_model' value="Save Model"  onClick="saveModel();return false">
 					<input type="button" id='blm1' value="Load Model 1"  onClick="loadmod(model1);return false">
 					<input type="button" id='blm2' value="Load Model 2"  onClick="loadmod(model2);return false">
 					<input type="button" id='blm3' value="Load Model 3"  onClick="loadmod(model3);return false">
