Add simpleError message, and use it for parsing errors

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Copyright 2011 University of Surrey
 <body>
 
 	<div id="dialog-message" title="Unable to complete request"></div>
+	<div id="dialog-simple-error" title="Unable to complete request"></div>
 	
 	<div id="tabs">
 		<ul>
