Start with tabs hidden and only display when the interface has been initialised, this stops displaying a partially loaded version with things all over the place.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ Copyright 2011 University of Surrey
 
 <body>
 
-	<div id="dialog-message" title="Unable to complete request"></div>
-	<div id="dialog-simple-error" title="Unable to complete request"></div>
+	<div id="dialog-message" title="Unable to complete request" style="display:none;"></div>
+	<div id="dialog-simple-error" title="Unable to complete request" style="display:none;"></div>
 	
-	<div id="tabs">
+	<div id="tabs" style="display:none;">
 		<ul>
 			<li><a href='#modelTab' 		>Model Editor			</a></li>
 			<li><a href='#lfTab'			>Logical Formulation	</a></li>
