--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ Copyright 2011 University of Surrey
 				<div align="right">
 					<input type="button" id='blm1' value="Load Example 1"  onClick="loadmod(model1);return false">
 					<input type="button" id='blm2' value="Load Example 2"  onClick="loadmod(model2);return false">
-					<input type="button" id='blm3' value="Load Example 3"  onClick="loadmod(model3);return false">
+					<!--#IFDEF server -->
+						<input type="button" id='blm3' value="Load Example 3"  onClick="loadmod(model3);return false">
+					<!--#ENDIFDEF -->
 					<input type="button" id='save_model' value="Save Model"  onClick="saveModel();return false">
 					<!--#IFDEF editor -->
 						<input type="button" id='bpm'  value="Parse Model"   onClick="parseModel();return false">
